[gd_scene load_steps=7 format=2]

[ext_resource path="res://BackgroundMinigames.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Maps/ResultScreen/resultScreen.gd" type="Script" id=2]
[ext_resource path="res://AssetsMenu/JogoFrutas/Habede Font by 7NTypes.otf" type="DynamicFontData" id=3]
[ext_resource path="res://AssetsMenu/menugames.tres" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="resultScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.05895, 0.886263 )
texture = ExtResource( 1 )

[node name="Labels" type="Node" parent="."]

[node name="noteLabel" type="Label" parent="Labels"]
margin_left = 484.0
margin_top = 149.0
margin_right = 581.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )
text = "10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageLabel" type="Label" parent="Labels"]
margin_left = 460.0
margin_top = 244.0
margin_right = 611.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 2 )
text = "Sample"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node" parent="."]

[node name="TextureButton" type="TextureButton" parent="Buttons"]
margin_left = 482.0
margin_top = 437.0
margin_right = 582.0
margin_bottom = 537.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/TextureButton" to="." method="_on_TextureButton_pressed"]
